--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,12 +1,17 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+
 body {
   background: #EEE;
   font-family: sans-serif;
   margin: 0;
-  padding: 0;
 }
 
-.current {
-  background: #DDD;
-  padding: 1em;
-  margin: 1em;
+#current-artwork {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
